--- a/clusters/eks/java-app/kustomization.yaml
+++ b/clusters/eks/java-app/kustomization.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m
-  path: "./path-to-your-java-app-manifest"
+  path: "./clusters/eks/java-app"
   prune: true
   sourceRef:
     kind: GitRepository
