--- a/clusters/eks/java-app/kustomization.yaml
+++ b/clusters/eks/java-app/kustomization.yaml
@@ -1,15 +1,5 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: comet-app-deployment
-  namespace: flux-system
-spec:
-  interval: 5m
-  path: "./clusters/eks/java-app"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  images:
-    - name: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
-      newTag: latest
+resources:
+  - deployment.yaml
+  - service.yaml
