--- a/clusters/eks/java-app/deployment.yaml
+++ b/clusters/eks/java-app/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: comet-java-container
           image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080     
           env:
