--- a/clusters/eks/flux-system/image-repository.yaml
+++ b/clusters/eks/flux-system/image-repository.yaml
@@ -1,9 +1,8 @@
 apiVersion: image.toolkit.fluxcd.io/v1alpha2
 kind: ImageRepository
 metadata:
-  name: java-app-image
+  name: comet-app-repo
   namespace: flux-system
 spec:
   interval: 1m
   image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
-
