--- a/clusters/eks/flux-system/image-policy.yaml
+++ b/clusters/eks/flux-system/image-policy.yaml
@@ -1,4 +1,4 @@
-apiVersion: image.toolkit.fluxcd.io/v1beta2
+apiVersion: image.toolkit.fluxcd.io/v1alpha2
 kind: ImagePolicy
 metadata:
   name: comet-app-image-policy
