--- a/clusters/eks/flux-system/image-repository.yaml
+++ b/clusters/eks/flux-system/image-repository.yaml
@@ -1,4 +1,4 @@
-apiVersion: image.toolkit.fluxcd.io/v1alpha2
+apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImageRepository
 metadata:
   name: comet-app-repo
@@ -6,4 +6,3 @@ metadata:
 spec:
   interval: 1m
   image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
-  provider: generic
