--- a/clusters/eks/flux-system/image-policy.yaml
+++ b/clusters/eks/flux-system/image-policy.yaml
@@ -7,5 +7,5 @@ spec:
   imageRepositoryRef:
     name: comet-app-repo
   policy:
-    semver:
-      range: '>=1.0.0'
+    alphabetical:
+      order: asc
