--- a/clusters/eks/flux-system/image-update-automation.yaml
+++ b/clusters/eks/flux-system/image-update-automation.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: COMET-FLUX
   git:
     checkout:
       ref:
@@ -16,8 +19,6 @@ spec:
       messageTemplate: 'Update image to {{ .ImageRef }}'
     push:
       branch: main
-    secretRef:
-      name: flux-system
   update:
     path: ./clusters/eks/java-app
     strategy: Setters
