--- a/clusters/eks/flux-system/image-repository.yaml
+++ b/clusters/eks/flux-system/image-repository.yaml
@@ -6,3 +6,5 @@ metadata:
 spec:
   interval: 1m
   image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
+  secretRef:
+    name: ecr-reg-cred
