--- a/clusters/eks/kustomization.yaml
+++ b/clusters/eks/kustomization.yaml
@@ -6,8 +6,6 @@ resources:
 
 images:
   - name: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
-    newName: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
-    policy:
-      semver: ">=1.0.0"
+    newTag: 1.0.0
 
 namespace: flux-system
