--- a/clusters/eks/flux-system/image-update-automation.yaml
+++ b/clusters/eks/flux-system/image-update-automation.yaml
@@ -20,5 +20,5 @@ spec:
     push:
       branch: main
   update:
-    path: ./clusters/eks/java-app
+    path: ./clusters/eks/flux-system/kustomization.yaml
     strategy: Setters
