Added image repo reference

--- a/clusters/eks/flux-system/image-update-automation.yaml
+++ b/clusters/eks/flux-system/image-update-automation.yaml
@@ -22,3 +22,5 @@ spec:
   update:
     path: ./clusters/eks/java-app/deployment.yaml
     strategy: Setters
+  imageRepositoryRef:
+    name: comet-app-repo  
