--- a/clusters/eks/flux-system/image-update-automation.yaml
+++ b/clusters/eks/flux-system/image-update-automation.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 1m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: COMET-FLUX
   git:
     checkout:
       ref:
