--- a/clusters/eks/flux-system/image-repository.yaml
+++ b/clusters/eks/flux-system/image-repository.yaml
@@ -5,5 +5,6 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
+  image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
   secretRef:
     name: ecr-reg-cred
