--- a/clusters/eks/flux-system/image-update-automation.yaml
+++ b/clusters/eks/flux-system/image-update-automation.yaml
@@ -20,6 +20,11 @@ spec:
     push:
       branch: main
   update:
-    path: ./clusters/eks/java-app/deployment.yaml
+    path: ./clusters/eks/java-app
     strategy: Setters
+    setters:
+      - name: comet-java-container  
+        value: "971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo"  
+  imageRepositoryRef:
+    name: comet-app-repo
     
