--- a/clusters/eks/java-app/deployment.yaml
+++ b/clusters/eks/java-app/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: comet-java-container
-          image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo:1.0.3
+          image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
