Added job history limit

--- a/clusters/eks/flux-system/refresh-ecr-credentials.yaml
+++ b/clusters/eks/flux-system/refresh-ecr-credentials.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: flux-system
 spec:
   schedule: "0 */12 * * *" 
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
