--- a/clusters/eks/flux-system/image-update-automation.yaml
+++ b/clusters/eks/flux-system/image-update-automation.yaml
@@ -20,6 +20,6 @@ spec:
     push:
       branch: main
   update:
-    path: ./clusters/eks/java-app
+    path: ./clusters/eks
     strategy: Setters
     
