added kubectl in credentials job

--- a/clusters/eks/flux-system/refresh-ecr-credentials.yaml
+++ b/clusters/eks/flux-system/refresh-ecr-credentials.yaml
@@ -13,11 +13,12 @@ spec:
         spec:
           containers:
             - name: ecr-token-refresh
-              image: amazon/aws-cli:2.13.2
+              image: bitnami/kubectl:latest # Change image
               command:
                 - /bin/sh
                 - -c
                 - |
+                  apt-get update && apt-get install -y awscli # add aws cli
                   TOKEN=$(aws ecr get-login-password --region us-east-1)
                   kubectl create secret docker-registry ecr-reg-cred \
                     --docker-server=971422678337.dkr.ecr.us-east-1.amazonaws.com \
