Added kubectl in image

--- a/clusters/eks/flux-system/refresh-ecr-credentials.yaml
+++ b/clusters/eks/flux-system/refresh-ecr-credentials.yaml
@@ -4,7 +4,7 @@ metadata:
   name: refresh-ecr-credentials
   namespace: flux-system
 spec:
-  schedule: "0 */12 * * *" 
+  schedule: "0 */12 * * *"
   failedJobsHistoryLimit: 5
   successfulJobsHistoryLimit: 5
   jobTemplate:
@@ -13,17 +13,21 @@ spec:
         spec:
           containers:
             - name: ecr-token-refresh
-              image: amazon/aws-cli:2.13.2 
+              image: bitnami/kubectl:latest
               command:
                 - /bin/sh
                 - -c
                 - |
-                  aws ecr get-login-password --region us-east-1 | kubectl create secret docker-registry ecr-reg-cred \
-                  --docker-server=971422678337.dkr.ecr.us-east-1.amazonaws.com \
-                  --docker-username=AWS \
-                  --docker-password=$(aws ecr get-login-password --region us-east-1) \
-                  --namespace=flux-system \
-                  --dry-run=client -o yaml | kubectl apply -f -
+                  set -e # Exit on error
+                  apt-get update -y
+                  apt-get install -y awscli
+                  TOKEN=$(aws ecr get-login-password --region us-east-1)
+                  kubectl create secret docker-registry ecr-reg-cred \
+                    --docker-server=971422678337.dkr.ecr.us-east-1.amazonaws.com \
+                    --docker-username=AWS \
+                    --docker-password="$TOKEN" \
+                    --namespace=flux-system \
+                    --dry-run=client -o yaml | kubectl apply -f -
               env:
                 - name: AWS_ACCESS_KEY_ID
                   valueFrom:
@@ -35,4 +39,13 @@ spec:
                     secretKeyRef:
                       name: aws-credentials
                       key: aws_secret_access_key
+              securityContext:
+                allowPrivilegeEscalation: false
+                capabilities:
+                  drop:
+                    - "ALL"
+                runAsNonRoot: true
+                seccompProfile:
+                  type: "RuntimeDefault"
+              imagePullPolicy: Always
           restartPolicy: OnFailure
