Modified credentials file

--- a/clusters/eks/flux-system/refresh-ecr-credentials.yaml
+++ b/clusters/eks/flux-system/refresh-ecr-credentials.yaml
@@ -13,14 +13,16 @@ spec:
         spec:
           containers:
             - name: ecr-token-refresh
-              image: bitnami/kubectl:latest
+              image: ubuntu:latest # Changed to ubuntu
               command:
                 - /bin/sh
                 - -c
                 - |
-                  set -e # Exit on error
+                  set -e
                   apt-get update -y
-                  apt-get install -y awscli
+                  apt-get install -y awscli curl
+                  curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+                  install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
                   TOKEN=$(aws ecr get-login-password --region us-east-1)
                   kubectl create secret docker-registry ecr-reg-cred \
                     --docker-server=971422678337.dkr.ecr.us-east-1.amazonaws.com \
