--- a/clusters/eks/flux-system/refresh-ecr-credentials.yaml
+++ b/clusters/eks/flux-system/refresh-ecr-credentials.yaml
@@ -13,14 +13,17 @@ spec:
         spec:
           containers:
             - name: ecr-token-refresh
-              image: ubuntu:latest # Changed to ubuntu
+              image: ubuntu:latest
               command:
                 - /bin/sh
                 - -c
                 - |
                   set -e
                   apt-get update -y
-                  apt-get install -y awscli curl
+                  apt-get install -y curl gnupg
+                  curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+                  unzip awscliv2.zip
+                  ./aws/install
                   curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
                   install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
                   TOKEN=$(aws ecr get-login-password --region us-east-1)
