--- a/clusters/eks/flux-system/refresh-ecr-credentials.yaml
+++ b/clusters/eks/flux-system/refresh-ecr-credentials.yaml
@@ -20,7 +20,7 @@ spec:
                 - |
                   set -e
                   apt-get update -y
-                  apt-get install -y curl gnupg
+                  apt-get install -y curl gnupg unzip # Added unzip
                   curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
                   unzip awscliv2.zip
                   ./aws/install
