Added react app auto updation

--- a/clusters/eks/flux-system/kustomization.yaml
+++ b/clusters/eks/flux-system/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
   - refresh-ecr-credentials.yaml
   - ecr-cred-role.yaml
   - ecr-cred-rolebinding.yaml
+  - comet-react-app-update-automation.yaml
