--- a/clusters/eks/flux-system/comet-react-app-update-automation.yaml
+++ b/clusters/eks/flux-system/comet-react-app-update-automation.yaml
@@ -1,29 +1,27 @@
+# For React app ImageUpdateAutomation
 apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImageUpdateAutomation
 metadata:
   name: comet-react-app-update-automation
   namespace: flux-system
 spec:
-  interval: 1m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system # Your GitRepository source
   git:
     checkout:
       ref:
-        branch: main # Your Git branch
+        branch: main
     commit:
       author:
-        name: Flux
         email: ssingh@infotrend.com
-      messageTemplate: '{{range .Changed.Changes}}{{print .OldValue}} -> {{println .NewValue}}{{end}}'
+        name: Flux
     push:
-      branch: main 
+      branch: main
+  interval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
   update:
-    path: ./clusters/eks/react-app 
+    path: ./clusters/eks
     strategy: Setters
-    setters:
-    - field: spec.template.spec.containers[name='comet-react-container'].image 
-      name: react-image
-  imagePolicy:
-    name: comet-react-image-policy
+    # Here, only the React app image policy will be updated
+    imagePolicyRef:
+      name: comet-react-image-policy
