--- a/clusters/eks/flux-system/image-policy.yaml
+++ b/clusters/eks/flux-system/image-policy.yaml
@@ -21,7 +21,7 @@ spec:
   imageRepositoryRef:
     name: comet-app-repo
   filterTags:
-    pattern: '^react-latest$'  
+    pattern: '^reacts-latest$'  
   policy:
     alphabetical:
       order: asc  
