--- a/clusters/eks/react-app/deployment.yaml
+++ b/clusters/eks/react-app/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: comet-react-container
-          image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo:react-latest # {"$imagepolicy": "flux-system:comet-react-image-policy"}
+          image: 971422678337.dkr.ecr.us-east-1.amazonaws.com/comet-app-repo:reacts-latest # {"$imagepolicy": "flux-system:comet-react-image-policy"}
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
